docs: adicionar documentacao Swagger do endpoint funceme-backfill
